--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "dist",
     "declaration": true,
     "skipLibCheck": true,
-    "rootDir": "./"
+    "rootDir": "./",
+    "resolveJsonModule": true
   },
   "include": ["./scripts", "./test", "./typechain", "./src"],
   "files": ["./hardhat.config.ts"]
